add 'standalone' parameter to (when false) - disable 'position: fixed' - hide border - hide buttons all above is to be used inside sweetalert2

--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
   },
   "homepage": "https://github.com/dai-siki/vue-image-crop-upload#readme",
   "dependencies": {
-    "babel-runtime": "^6.11.6"
+    "babel-runtime": "^6.11.6",
+    "cross-env": "^5.1.3"
   },
   "devDependencies": {
     "babel": "^6.5.2",
